Fixed swap on mobile class in RTL

--- a/assets/scss/rtl/style-rtl.scss
+++ b/assets/scss/rtl/style-rtl.scss
@@ -46,7 +46,7 @@ a {
 @media only screen and (max-width: 1024px) {
 	.swap-on-mobile {
 		display: flex !important;
-		flex-direction: column-reverse;
+		flex-direction: column;
     padding-top: 20px;
 	}
 }
